# Ravah-App-OpenSource

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/src/components/: Demo.tsx  FeaturesGrid.tsx  ProofAndCta.tsx  RavahHero.tsx  ScheduleSection.tsx
frontend/src/components/ui/: liquid-glass-button.tsx  smooth-cursor.tsx
frontend/src/layouts/: BaseLayout.astro
frontend/src/pages/: agent.astro  demo.astro  index.astro  items.astro  login.astro  onboarding.astro  signup.astro  waitlist.astro
ravah/: __init__.py  cli.py  config.py  gemini_service.py
